# Brand-gap-inter

./: .gitignore  ENGINEERING_DIRECTION_UPDATE.md  ENGINEERING_TEAM_BRIEF_CI_EVAL_GATES.md  ENGINEERING_TRANSITION_PLAN.md  MVP_ACCELERATION_PLAN.md  PROJECT_PROGRESS_LOG.md  README.md  SPRINT_1WEEK_EXECUTION_PLAN.md  SPRINT_TASK_LIST.md  pyproject.toml
eval/: normalization_thresholds.json  taxonomy_thresholds.json  thresholds.json  thresholds_brand_positioning.json  thresholds_brand_profile.json  thresholds_decision_brief.json  thresholds_deep_inference.json  thresholds_demand_signal.json  thresholds_discovery.json  thresholds_gap_validation.json  thresholds_product_intelligence.json
schemas/: analysis_stack_report.schema.json  brand_positioning_record.schema.json  brand_positioning_report.schema.json  brand_profile_record.schema.json  brand_profile_report.schema.json  data_collection_report.schema.json  decision_brief_report.schema.json  deep_brand_inference_report.schema.json  demand_signal_record.schema.json  demand_signal_report.schema.json  discovery_batch_report.schema.json  discovery_result_record.schema.json  evidence.schema.json  evidence_workbench_manifest.schema.json  gap_validation_record.schema.json  gap_validation_report.schema.json  landscape_report.schema.json  normalization_batch_report.schema.json  normalization_record_result.schema.json  normalized_listing.schema.json  opportunity.schema.json  product_detail_record.schema.json  product_intelligence_batch_report.schema.json  product_intelligence_record.schema.json  raw_source_record.schema.json  (+6 more)
(+116 files in other folders)
