[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brand-gap-inference"
version = "0.1.0"
description = "Phase 1 contracts and eval gate for the Brand Gap Inference system."
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
